--- a/Report/MobilePoll_Reports - Projector Friendly.html
+++ b/Report/MobilePoll_Reports - Projector Friendly.html
@@ -50,6 +50,7 @@
 				height: 70px;	
 				font-size: 20px;
 				font-family: Arial, Helvetica, sans-serif;				
+				margin-top: -100px;
 			}
 			span {
 				border: 1px solid #ccc; float: left; width: 12px; height: 12px; margin: 2px;
@@ -57,7 +58,7 @@
 		</style>
 	</head>
 	<body onload="generateReportsFunction()">		
-		<<div id="GroupHeading">Hospital Service Delivery Survey</div>
+		<div id="GroupHeading">Hospital Service Delivery Survey</div>
 		<!--<div id="Group"> -->
 			<div id="Report">
 				<div id="ReportHeading">What is your Gender?</div>
